--- a/SkEditorPlus/Languages/English.xaml
+++ b/SkEditorPlus/Languages/English.xaml
@@ -156,6 +156,14 @@
     <system:String x:Key="NoResults">Not found</system:String>
     <system:String x:Key="OneMatchFound">One match found</system:String>
     <system:String x:Key="EmptySearchText">The search text is empty!</system:String>
+    <system:String x:Key="SearchPrevious">Previous</system:String>
+    <system:String x:Key="SearchNext">Next</system:String>
+    <system:String x:Key="SearchCaseSensitive">Case sensitive</system:String>
+    <system:String x:Key="SearchOnlyWords">Only the words</system:String>
+    <system:String x:Key="SearchUseRegex">Use regex</system:String>
+    <system:String x:Key="SearchReplaceNext">Replace next</system:String>
+    <system:String x:Key="SearchReplaceAll">Replace all</system:String>
+
 
     <system:String x:Key="CloseConfirmation">The file has not been saved. Are you sure you want to close it?</system:String>
     <system:String x:Key="Attention">Attention!</system:String>
