--- a/SkEditorPlus/Styles/SearchPanelStyle.xaml
+++ b/SkEditorPlus/Styles/SearchPanelStyle.xaml
@@ -42,7 +42,7 @@
 								Height="26" 
 								Width="26" 
 								Command="editor:SearchCommands.FindPrevious" 
-								ToolTip="Poprzednie" 
+								ToolTip="{DynamicResource SearchPrevious}" 
 								Content="🡩" 
 								FontFamily="/Fonts/#Open Sans"
 								FontSize="12"
@@ -52,7 +52,7 @@
 								Height="26" 
 								Width="26" 
 								Command="editor:SearchCommands.FindNext" 
-								ToolTip="Następne" 
+								ToolTip="{DynamicResource SearchNext}" 
 								Content="🡫" 
 								FontFamily="/Fonts/#Open Sans"
 								FontSize="12"
@@ -63,7 +63,7 @@
 									Height="26" 
 									Margin="2.5 0" 
 									Cursor="Hand"
-									ToolTip="Uwzględnij wielkość liter"
+									ToolTip="{DynamicResource SearchCaseSensitive}"
 									IsChecked="{Binding MatchCase, RelativeSource={RelativeSource TemplatedParent}}" 
 									Content="aA" 
 									FontFamily="/Fonts/#Open Sans"
@@ -74,7 +74,7 @@
 									Height="26" 
 									Margin="2.5 0" 
 									Cursor="Hand"
-									ToolTip="Tylko same słowa"
+									ToolTip="{DynamicResource SearchOnlyWords}"
 									IsChecked="{Binding WholeWords, RelativeSource={RelativeSource TemplatedParent}}"
 									Content="Ab" 
 									FontFamily="/Fonts/#Open Sans"
@@ -85,7 +85,7 @@
 									Height="26" 
 									Margin="2.5 0" 
 									Cursor="Hand"
-									ToolTip="Użyj regexa"
+									ToolTip="{DynamicResource SearchUseRegex}"
 									IsChecked="{Binding UseRegex, RelativeSource={RelativeSource TemplatedParent}}"
 									Content="a*" 
 									FontFamily="/Fonts/#Open Sans"
@@ -130,7 +130,7 @@
 									Height="26" 
 									Width="26" 
 									Command="editor:SearchCommands.ReplaceNext" 
-									ToolTip="Zastąp następne" 
+									ToolTip="{DynamicResource SearchReplaceNext}" 
 									Content="↺" 
 									FontFamily="/Fonts/#Open Sans"
 									FontSize="16"
@@ -141,7 +141,7 @@
 									Height="26" 
 									Width="26" 
 									Command="editor:SearchCommands.ReplaceAll" 
-									ToolTip="Zastąp wszystko" 
+									ToolTip="{DynamicResource SearchReplaceAll}" 
 									Content="*" 
 									FontFamily="/Fonts/#Open Sans"
 									FontSize="12"
