--- a/SkEditorPlus/Languages/German.xaml
+++ b/SkEditorPlus/Languages/German.xaml
@@ -155,6 +155,13 @@
     <system:String x:Key="NoResults">Nicht gefunden</system:String>
     <system:String x:Key="OneMatchFound">Ein Treffer gefunden</system:String>
     <system:String x:Key="EmptySearchText">Der gesuchte Text ist leer!</system:String>
+    <system:String x:Key="SearchPrevious">Vorherige</system:String>
+    <system:String x:Key="SearchNext">Nächste</system:String>
+    <system:String x:Key="SearchCaseSensitive">Groß-/Kleinschreibung beachten</system:String>
+    <system:String x:Key="SearchOnlyWords">Nur ganze Wörter</system:String>
+    <system:String x:Key="SearchUseRegex">Regulären Ausdruck verwenden</system:String>
+    <system:String x:Key="SearchReplaceNext">Nächste ersetzen</system:String>
+    <system:String x:Key="SearchReplaceAll">Alle ersetzen</system:String>
 
     <system:String x:Key="CloseConfirmation">Die Datei wurde nicht gespeichert. Möchten Sie sie wirklich schließen?</system:String>
     <system:String x:Key="Attention">Achtung!</system:String>
