--- a/SkEditorPlus/Languages/PirateSpeak.xaml
+++ b/SkEditorPlus/Languages/PirateSpeak.xaml
@@ -144,6 +144,13 @@
     <system:String x:Key="NoResults">Not found, ye scallywag</system:String>
     <system:String x:Key="OneMatchFound">One treasure found</system:String>
     <system:String x:Key="EmptySearchText">Arrr, ye search text be empty!</system:String>
+    <system:String x:Key="SearchPrevious">Afore</system:String>
+    <system:String x:Key="SearchNext">Succedent</system:String>
+    <system:String x:Key="SearchCaseSensitive">Sensible t' capital letters</system:String>
+    <system:String x:Key="SearchOnlyWords">Only t' words</system:String>
+    <system:String x:Key="SearchUseRegex">Use regex ye scallywag</system:String>
+    <system:String x:Key="SearchReplaceNext">Replace aft</system:String>
+    <system:String x:Key="SearchReplaceAll">Replace all o' t' scallywags</system:String>
 
     <system:String x:Key="CloseConfirmation">Yer file be not saved. Be ye sure ye want to close it?</system:String>
     <system:String x:Key="Attention">Attention, me hearties!</system:String>
