--- a/SkEditorPlus/Windows/QuickEditsWindow.xaml
+++ b/SkEditorPlus/Windows/QuickEditsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<hc:Window x:Name="formattingWindow" x:Class="SkEditorPlus.Windows.FormattingWindow"
+﻿<hc:Window x:Name="quickEditsWindow" x:Class="SkEditorPlus.Windows.QuickEditsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
